fixing overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     width: 100dvw;
     height: 100dvh;
     color: #542D58;
-    /* overflow: hidden; */
+    overflow: hidden;
     padding: 50px 0;
 }
 
